# FGam

./: CMakeLists.txt  Competition.cpp  Competition.h  Contract.cpp  Contract.h  Game.cpp  Game.h  Juego.cpp  Juego.h  MainLayout.cpp  MainLayout.h  MainWindow.cpp  MainWindow.h  NewGameLayout.cpp  NewGameLayout.h  PlayerGame.cpp  PlayerGame.h  PlayerTeam.cpp  PlayerTeam.h  Players.cpp  Players.h  TODO.txt  Team.cpp  Team.h  Transfer.cpp  Transfer.h  data.db  main.cpp
